--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,9 @@
 TODO
 
-Criar o Mockups da App
+Criar o Mockups da App- DONE
 
 Criar a base de dados SQLite (deve permitir guardar a palavra-passe na base de dados)
 
 Estudar como aplicar a segurança
 
-e o resto
+e o resto;
